# remove-expiration-date

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs
src/cmd/: errors.rs  mod.rs  models.rs
src/cmd/config/: credentials.rs  logs.rs  mod.rs
src/cmd/remover/: mod.rs  nodes.rs
src/cmd/utils/: dates.rs  strings.rs
